--- a/resources/assets/sass/vadmin/_pluginsOverrides.sass
+++ b/resources/assets/sass/vadmin/_pluginsOverrides.sass
@@ -111,26 +111,26 @@ $phvFsize: 0.9rem
 
 
 /// Multiple Select Chosen
-
 .chosen-container-single .chosen-single
 	background: #fff
 	box-shadow: none
 	border-radius: 0
 	padding: 6px 0px 0px 15px
 	height: 36px
-.chosen-container-multi .chosen-choices
-	background: #fff
-	box-shadow: none
-	border-radius: 0
-	padding: 3px 5px 3px 15px
-	li.search-choice
-		border: 0
-		background-image: none
+.chosen-container-multi 
+	.chosen-choices
+		background: #fff
 		box-shadow: none
-		background-color: #7A83CA
-		color: #fff
-		a
+		border-radius: 0
+		padding: 3px 5px 3px 15px
+		li.search-choice
+			border: 0
+			background-image: none
+			box-shadow: none
+			background-color: #7A83CA
 			color: #fff
+			a
+				color: #fff
 
 /// Image File Upload Input (JQuery Filer)
 .jFiler-theme-default .jFiler-input-caption,.jFiler-theme-default .jFiler-input-button
