--- a/resources/assets/sass/web/_elements.sass
+++ b/resources/assets/sass/web/_elements.sass
@@ -672,13 +672,13 @@ $red1: rgb(235, 87, 87)
 .pagination>li:first-child>a, .pagination>li:first-child>span
 	border-radius: 0 !important
 .pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover
-	background-color: #ea5050
+	background-color: $color1
 	border: 0
 	border-radius: 0 !important
 .pagination > li > a, .pagination > li > span
 	color: #383838
 .pagination > li > a:focus, .pagination > li > a:hover, .pagination > li > span:focus, .pagination > li > span:hover
-	color: #ea5050
+	color: $color1
 
 
 //////////////////////////////////////
