--- a/resources/assets/sass/web/_gallery.sass
+++ b/resources/assets/sass/web/_gallery.sass
@@ -1,10 +1,80 @@
 .gallery-list
     a
         color: #383838
-    .inner
-        margin-bottom: 20px
+    .item
+        margin-bottom: 40px
+        .image
+            position: relative
+            img
+                max-width: 100%
+            .overlay
+                position: absolute
+                top: 0
+                left: 0
+                opacity: 0
+                width: 100%
+                height: 100%
+                background-color: rgba($color1, 0.50)
+                color: $color3
+                font-size: 1.2rem
+                font-weight: 400
+                font-family: $font2
+                @include flex-column
+                @include transition(0.3s)
+                .btn
+                    border: 1px solid $color3
+                    background-color: transparent
+                    &:hover
+                        background-color: $color3
+                        color: $color2
+                &:hover
+                    opacity: 1
+                    cursor: pointer
         .title
             white-space: nowrap
             overflow: hidden
             text-overflow: ellipsis
-        
+            font-size: 1rem
+            font-weight: 300
+            font-family: $font2
+            margin-top: 5px
+            border-bottom: 1px solid #ccc
+
+// Slider
+
+.gallery-slider
+    text-align: center
+    @include flex-center
+    .owl-carousel
+        max-width: 450px
+        .owl-nav
+            .owl-prev
+                width: 15px
+                height: 100px
+                position: absolute
+                top: 40%
+                margin-left: -40px
+                display: block !important
+                border: 0px solid black
+            .owl-next
+                width: 15px
+                height: 100px
+                position: absolute
+                top: 40%
+                right: -40px
+                display: block !important
+                border: 0px solid black
+            .owl-prev,.owl-next
+                font-size: 4rem
+                color: $color1
+                &:active,&:focus
+                    border: 0
+    .owl-theme .owl-nav [class*=owl-]
+        @include transition(0.2s)                
+    .owl-theme .owl-nav [class*=owl-]:hover
+        background-color: transparent
+        color: $color3
+
+.gallery-slider .owl-carousel .owl-nav .owl-prev, .gallery-slider .owl-carousel .owl-nav .owl-next
+    &:hover,&:active,&:focus
+        outline: none
