--- a/resources/assets/sass/web/_gallery.sass
+++ b/resources/assets/sass/web/_gallery.sass
@@ -7,6 +7,7 @@
             position: relative
             img
                 max-width: 100%
+                width: 100%
             .overlay
                 position: absolute
                 top: 0
