--- a/public/css/web.css
+++ b/public/css/web.css
@@ -988,37 +988,32 @@
   }
 }
 
-.swiper-container {
-  width: 100%;
-  height: 500px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .swiper-slide {
-  background-size: cover;
-  background-position: center;
+  text-align: center;
 }
 
-.gallery-top {
-  height: 80%;
-  width: 100%;
+.swiper-container .swiper-button-prev, .swiper-container .swiper-button-next {
+  -webkit-transition: all 0.2s ease 0s;
+  transition: all 0.2s ease 0s;
+  background-image: none;
+  font-size: 2rem;
+  opacity: 0;
 }
 
-.gallery-thumbs {
-  height: 20%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 10px 0;
+.swiper-container .swiper-button-prev i, .swiper-container .swiper-button-next i {
+  font-weight: 400;
+  color: blue;
 }
 
-.gallery-thumbs .swiper-slide {
-  width: 25%;
-  height: 100;
-  opacity: 0.4;
+.swiper-container .swiper-scrollbar {
+  display: none;
 }
 
-.gallery-thumbs .swiper-slide-active {
+.swiper-container img {
+  max-width: 100%;
+}
+
+.swiper-container:hover .swiper-button-prev, .swiper-container:hover .swiper-button-next {
   opacity: 1;
 }
 
@@ -1730,11 +1725,8 @@ ul {
 }
 
 .contact-form form {
+  margin-top: 25px;
   color: #383838;
-}
-
-.contact-form form > .col-md-6 {
-  padding: 0;
 }
 
 .contact-form form .form-group {
@@ -1778,16 +1770,17 @@ ul {
   -webkit-box-shadow: none;
           box-shadow: none;
   border-radius: 0;
-  border: 1px solid #00122d;
+  border: 1px solid #bdbdbd;
   font-size: 1.2rem;
   margin-bottom: 10px;
 }
 
 .contact-form textarea {
-  height: 155px;
+  height: 140px;
 }
 
 .contact-form .contactBtn {
+  margin-top: 25px;
   font-size: 1.5rem;
   color: #fff;
   font-family: "Arvo", serif;
@@ -1833,6 +1826,15 @@ ul {
   }
   .contact-section2 .horiz-items .inner img {
     float: none;
+  }
+}
+
+@media (min-width: 991px) {
+  .contact-form form .left {
+    padding-right: 4px;
+  }
+  .contact-form form .right {
+    padding-left: 4px;
   }
 }
 
