--- a/resources/assets/sass/web/_elements.sass
+++ b/resources/assets/sass/web/_elements.sass
@@ -847,49 +847,24 @@ $red1: rgb(235, 87, 87)
 ////////////////////////////////////////
  
 
-// .swiper-slide
-// 	text-align: center
-// 	max-height: 500px
-// .swiper-container
-// 	.swiper-button-prev,.swiper-button-next
-// 		@include transition(0.2s)
-// 		background-image: none
-// 		font-size: 2rem
-// 		opacity: 0
-// 		i
-// 			font-weight: 400
-// 			color: blue
-// 	.swiper-scrollbar
-// 		display: none
-// 	img
-// 		max-width: 100%
-// 	&:hover
-// 		.swiper-button-prev,.swiper-button-next
-// 			opacity: 1
-
-.swiper-container
-	width: 100%
-	height: 500px
-	margin-left: auto
-	margin-right: auto
 .swiper-slide
-	background-size: cover
-	background-position: center
-.gallery-top
-	height: 80%
-	width: 100%
-.gallery-thumbs
-	height: 20%
-	box-sizing: border-box
-	padding: 10px 0
-	
-.gallery-thumbs .swiper-slide
-	width: 25%;
-	height: 100
-	opacity: 0.4
-	
-.gallery-thumbs .swiper-slide-active
-	opacity: 1
+	text-align: center
+.swiper-container
+	.swiper-button-prev,.swiper-button-next
+		@include transition(0.2s)
+		background-image: none
+		font-size: 2rem
+		opacity: 0
+		i
+			font-weight: 400
+			color: blue
+	.swiper-scrollbar
+		display: none
+	img
+		max-width: 100%
+	&:hover
+		.swiper-button-prev,.swiper-button-next
+			opacity: 1
 	
 
 /////////// Home Slider ////////////////
