--- a/resources/assets/sass/web/_mixins.sass
+++ b/resources/assets/sass/web/_mixins.sass
@@ -2,6 +2,8 @@
 ///////////////// MIXINS /////////////////
 //////////////////////////////////////////
 
+@mixin b
+  border: 1px solid red
 
 ////////////////////////////////////////
 //                                    //
