--- a/public/css/vadmin.css
+++ b/public/css/vadmin.css
@@ -284,14 +284,14 @@ hr {
   border: 2px solid #f9f9f9;
 }
 
-.round-image-card .inner .image {
+.round-image-card .inner .update-image {
   position: relative;
   padding: 25px 5px;
   background-color: #f9f9f9;
   text-align: center;
 }
 
-.round-image-card .inner .image .over-text {
+.round-image-card .inner .update-image .over-text {
   position: absolute;
   width: 100%;
   left: 0;
@@ -304,12 +304,22 @@ hr {
   transition: all 0.2s ease 0s;
 }
 
-.round-image-card .inner .image:hover .over-text {
+.round-image-card .inner .update-image:hover .over-text {
   opacity: 1;
   pointer-events: none;
 }
 
-.round-image-card .inner .image img {
+.round-image-card .inner .image {
+  padding: 25px 5px;
+  background-color: #f9f9f9;
+  text-align: center;
+}
+
+.round-image-card .inner .image .over-text {
+  display: none;
+}
+
+.round-image-card .inner .update-image img, .round-image-card .inner .image img {
   border-radius: 50%;
   width: 230px;
   height: 230px;
@@ -319,9 +329,14 @@ hr {
   transition: all 0.2s ease 0s;
 }
 
-.round-image-card .inner .image img:hover {
+.round-image-card .inner .update-image img:hover, .round-image-card .inner .image img:hover {
   cursor: pointer;
   opacity: 0.9;
+}
+
+.round-image-card .inner .image img:hover {
+  opacity: 1;
+  cursor: default;
 }
 
 .round-image-card .inner .card-content {
@@ -1250,6 +1265,37 @@ ul.pagination li.disabled {
 
 .violation img {
   width: 333px;
+}
+
+.main-copyright {
+  position: absolute;
+  bottom: 5px;
+  right: 25px;
+}
+
+.main-copyright .text {
+  float: left;
+  padding-top: 4px;
+  font-style: italic;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.main-copyright a {
+  color: #5D76C9;
+  margin-right: 10px;
+}
+
+@media (max-width: 400px) {
+  .main-copyright {
+    position: absolute;
+    left: 10px;
+    text-align: center;
+  }
+  .main-copyright .text {
+    float: none;
+    margin-bottom: 10px;
+  }
 }
 
 .dashboard {
