--- a/resources/assets/sass/vadmin/_vadminElements.sass
+++ b/resources/assets/sass/vadmin/_vadminElements.sass
@@ -86,7 +86,8 @@
 			&:hover
 					opacity: 1
 					cursor: default
-					
+		button, html [type="button"], [type="reset"], [type="submit"]
+			-webkit-appearance: none
 		.card-content
 			border: 1px solid #f9f9f9
 			border-top: 0
