--- a/resources/assets/sass/web/_elements.sass
+++ b/resources/assets/sass/web/_elements.sass
@@ -171,6 +171,19 @@ $red1: rgb(235, 87, 87)
 		background-color: #fff
 		color: #000
 
+.btnHollowInv
+	padding: 10px 15px
+	background-color: #fff
+	border: 2px solid white
+	font-size: 1.5rem
+	@include transition(0.2s)
+	color: #383838
+	&:hover
+		background-color: transparent
+		border: 2px solid white
+		cursor: pointer
+		color: #fff
+
 .btnHollowGreyTrans
 	background-color: transparent
 	border: 1px solid $light-green2
