--- a/resources/assets/sass/web/_webSections.sass
+++ b/resources/assets/sass/web/_webSections.sass
@@ -109,7 +109,17 @@
 		margin-bottom: 20px
 
 		
+.home-section-3b
+	padding: 60px 10px
+	background-color: $color1
+	@include flex-center
+	h3
+		margin: 0
 
+@media (max-width: 991px)
+	.home-section-3b
+		h3
+			margin-bottom: 20px
 //--------- FOURTH SECTION ------------- //
 .home-section-4
 	background-color: $color2
