New pdf, new texts

--- a/resources/assets/sass/web/_elements.sass
+++ b/resources/assets/sass/web/_elements.sass
@@ -713,6 +713,7 @@ $red1: rgb(235, 87, 87)
 		img
 			margin-right: 10px
 			float: left
+			max-width: 75px
 		p
 			color: $color1
 			font-size: 1rem
