--- a/resources/assets/sass/vadmin/_mixins.sass
+++ b/resources/assets/sass/vadmin/_mixins.sass
@@ -164,6 +164,15 @@
 	-ms-grid-row-align: center
 	align-items: center
 
+@mixin flex-center-right
+	display: -webkit-box
+	display: -ms-flexbox
+	display: flex
+	-webkit-box-align: right
+	-ms-flex-align: right
+	-ms-grid-row-align: right
+	align-items: right
+
 @mixin flex-center-grow
 	display: -webkit-box
 	display: -ms-flexbox
