--- a/resources/assets/sass/vadmin/_pluginsOverrides.sass
+++ b/resources/assets/sass/vadmin/_pluginsOverrides.sass
@@ -36,10 +36,8 @@
 
 .content-wrapper
 	padding-top: 0 !important    
-	.list-wrapper
-		//margin-top: 136px
-		//margin-top: 110px
-//     .inner-wrapper
+	padding-bottom: 70px !important
+	
 
 .top-space
 	height: 120px
