--- a/resources/assets/sass/vadmin/_vadminGeneral.sass
+++ b/resources/assets/sass/vadmin/_vadminGeneral.sass
@@ -2,13 +2,15 @@ html
 	min-height: 100%
 	position: relative
 	font-size: 100%
-
+	padding-bottom: 50px
+	
 @media (max-width: 768px)
 	html
 		overflow-x: hidden 
     
 body
 	height: 100%
+	min-height: 100%
 	overflow-x: hidden
 	font-size: 16.5px
 	background-color: #fcfcfc
