--- a/resources/assets/sass/vadmin/_mixins.sass
+++ b/resources/assets/sass/vadmin/_mixins.sass
@@ -172,6 +172,9 @@
 	-ms-flex-align: right
 	-ms-grid-row-align: right
 	align-items: right
+	-webkit-box-pack: end
+	-ms-flex-pack: end
+	justify-content: flex-end
 
 @mixin flex-center-grow
 	display: -webkit-box
