--- a/resources/assets/sass/web/_webSections.sass
+++ b/resources/assets/sass/web/_webSections.sass
@@ -243,6 +243,39 @@
 
 .servicios-de-contratacion
 	padding: 25px 10px
+
+/* INSUMOS */
+
+.laboratorio-mobil
+	background: url(../webimages/cimhesas/fondo.jpg)
+	background-size: cover
+	background-repeat: no-repeat
+	background-position: center center
+	padding: 60px 20px
+	h2
+		margin-top: 50px
+		color: #fff
+	.btn
+		font-family: $font2
+
+
+.fab-prens
+	padding: 20px 10px
+	.btn
+		font-size: 1.2rem
+	.text-content
+		padding-top: 10px
+
+.download-catalog
+	color: #fff
+	padding: 25px 5px
+	.text
+		margin-right: 20px
+		font-size: 1.4rem
+		font-weight: 400
+		font-family: $font2
+		float: left
+
 ////////////////////////////////////////
 //                                    //
 //              CONTACT               //
