--- a/resources/assets/sass/web/_webSections.sass
+++ b/resources/assets/sass/web/_webSections.sass
@@ -247,7 +247,14 @@
 			filter: invert(1)
 
 .servicios-de-contratacion
-	padding: 25px 10px
+	padding: 90px 10px 25px 10px
+	.second-sect-text
+		padding-top: 25px
+
+@media (max-width: 1000px)
+	.servicios-de-contratacion
+		.second-sect-text
+			margin-bottom: 40px
 
 /* INSUMOS */
 
