--- a/resources/assets/sass/web/_webGeneral.sass
+++ b/resources/assets/sass/web/_webGeneral.sass
@@ -44,6 +44,10 @@ h5
 	line-height: 1.6rem
 	font-weight: 300
 
+@media (max-width: 768px)
+	h2
+		font-size: 1.2rem
+
 hr
 	border-top: 1px solid $color1
 
